Attempt at fixing mobile overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ select#area-unit { display: inline-block; width: 75px; vertical-align: top; }
 	body.stick-nav header .branding img { width: 115px; transition: none; }
 	header nav { display: flex; justify-content: flex-end; }
 	header nav #navigation-toggle { display: flex; width: 80px; height: 80px; justify-content: center; align-items: center;  margin-right: -2.5vw; font-size: 1.75rem; text-decoration: none; color: var(--color-tertiary-darker); position: relative; z-index: 21; transition: color .1s ease-in-out .05s; }
-	header nav > ul { display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100vw; height: 100vh; margin: 0; color: white; background-color: var(--color-primary); overflow: auto; position: absolute; top: 0; left: -100%; z-index: 20; transition: left .35s ease-in-out; }
+	header nav > ul { display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100vh; margin: 0; color: white; background-color: var(--color-primary); overflow: auto; position: absolute; top: 0; left: -100%; z-index: 20; transition: left .35s ease-in-out; }
 	header nav > ul > li:not(:first-child) { margin-top: 0; margin-left: 0; }
 	header nav > ul > li > a, 
 	header nav > ul > li .dropdown-toggle { font-size: clamp(18px, 24px, 4vmin); line-height: 1.5; }
